Reverting requirement of JDK 14 back to JDK 11